# RenderPractice

./: .gitignore  .gitmodules  CMakeLists.txt  RenderPractice.code-workspace  jails.json  odinfmt.json  ols.json  temp.odin
C++/: CMakeLists.txt
C++/Plugins/: CMakeLists.txt
C++/Source/: main.cpp
C++/Source/Core/Collections/: FixedSizeBuffer.h
C++/Source/Core/Logging/: Logging.cpp
Odin/: .gitignore  main.odin
Odin/platform/collections/: fixed_size_buffer.odin
Odin/platform/window/: procedures.odin
Plugins/: CMakeLists.txt
Source/: main.cpp
Source/Core/Logging/: Logging.h
Source/Core/Window/: Window.cpp  Window.h
src/: app_state.jai  app_state.odin  build.jai  main.jai  main.odin  mem_tracker.odin
src/platform/collections/: fixed_size_buffer.jai  fixed_size_buffer.odin  module.jai
src/platform/debug/: logging.jai  logging.odin  module.jai
src/platform/renderer/: procedures.odin  state.odin
src/platform/rhi/: module.jai  procedures.jai  procedures.odin  state.jai  state.odin
src/platform/rhi_directx/: module.jai  procedures.jai  procedures.odin  state.jai  state.odin
src/platform/rhi_null/: module.jai  procedures.jai  procedures.odin  state.jai  state.odin
src/platform/rhi_vulkan/: errors.jai  errors.odin  module.jai  procedures.jai  procedures.odin  shader_compiler.odin  state.jai  state.odin  window_lifetime.jai  window_lifetime.odin
src/platform/window/: module.jai  procedures.jai  procedures.odin  state.jai  state.odin
src/shaders/triangle/: exec.frag  exec.vert
